--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
   <title>FullDemo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/img1.jpg">
 </head>
 <body>
-  <app-root></app-root>
+  <myfirstapp-root ></myfirstapp-root>
+  <app-parent></app-parent>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
